# mpc

./: DEV_LOG_2026-02-20.md  MPC_ERROR_REPORT_20260218_004532.md  next.md
papers/: ltv_mpc.md  mpc_주행_원리_중학생용.md
scripts/: freeze_analyzer.py
src/bisa/: CMakeLists.txt  package.xml
src/bisa/config/: cav_config.best.yaml  cav_config.yaml  test_scenarios.yaml
src/bisa/hdmap_data/: global_info.json  link_set.json  node_set.json
src/bisa/include/bisa/: local_path_pub_cpp.hpp  mpc_controller_cpp.hpp  mpc_path_tracker_cpp.hpp
src/bisa/launch/: problem3_cpp_launch.py
src/bisa/msg/: LapInfo.msg  MPCPerformance.msg
src/bisa/rviz/: bisa.rviz  hdmap_view.rviz
src/bisa/scripts/: analyze_mpc_performance.py  collision_avoidance_node.py  dijkstra_planner.py  global_path_pub.py  global_path_pub_multi.py  hdmap_generator.py  hdmap_visualizer.py  mgeo_class_defs.py  mpc_dashboard.py  mpc_debug_monitor.py  mpc_parameter_tuner.py  test_collision_scenarios.py
src/bisa/src/: local_path_pub_cpp.cpp  mpc_controller_cpp.cpp  mpc_path_tracker_cpp.cpp  priority_collision_gate.cpp  test_osqp.cpp
src/bisa/src/ltv_mpc/: ltv_cost.cpp  ltv_cost.hpp  ltv_model.cpp  ltv_model.hpp  ltv_mpc.cpp  ltv_mpc.hpp  ltv_solver.cpp  ltv_solver.hpp  ltv_types.hpp
src/communication_manager/include/communication_manager/: communication_base.hpp  pose_sharing.hpp
src/hv_handler/include/hv_handler/: hv_base.hpp
src/simulator/src/app/plugins/: collision.cpp  ros.cpp  vehicle.cpp
src/simulator/src/engine/world/: rosnode.hpp
src/simulator_launch/launch/: simulator_launch.py
